--- a/faser-uring/Cargo.toml
+++ b/faser-uring/Cargo.toml
@@ -16,6 +16,7 @@ sptr = "0.3.2"
 pin-list = "0.1.0"
 thiserror = "1.0.50"
 log = { version = "0.4.20", features = ["kv_unstable"] }
+bytes = "1.5.0"
 
 [dev-dependencies]
 env_logger = "0.10.0"
