--- a/faser-uring/Cargo.toml
+++ b/faser-uring/Cargo.toml
@@ -17,6 +17,7 @@ pin-list = "0.1.0"
 thiserror = "1.0.50"
 log = { version = "0.4.20", features = ["kv_unstable"] }
 bytes = "1.5.0"
+socket2 = "0.5.5"
 
 [dev-dependencies]
 env_logger = "0.10.0"
