--- a/faser-uring/Cargo.toml
+++ b/faser-uring/Cargo.toml
@@ -13,11 +13,11 @@ libc = "0.2.149"
 pin-project-lite = "0.2.13"
 smallvec = "1.11.1"
 sptr = "0.3.2"
-pin-list = "0.1.0"
 thiserror = "1.0.50"
 log = { version = "0.4.20", features = ["kv_unstable"] }
 bytes = "1.5.0"
 socket2 = "0.5.5"
+cordyceps = "0.3.2"
 
 [dev-dependencies]
 env_logger = "0.10.0"
