--- a/norn-uring/Cargo.toml
+++ b/norn-uring/Cargo.toml
@@ -18,6 +18,7 @@ log = { version = "0.4.20", features = ["kv_unstable"] }
 bytes = "1.5.0"
 socket2 = "0.5.5"
 cordyceps = "0.3.2"
+tokio = { version = "1.35.0", features = ["io-util"] }
 
 [dev-dependencies]
 env_logger = "0.10.0"
