--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,20 @@
 resolver = "2"
 members = [ "benches", "norn-executor", "norn-task" , "norn-timer", "norn-uring"]
 
+[workspace.dependencies]
+cordyceps = { version = "0.3" }
+futures = { version = "0.3" }
+pin-project-lite = { version = "0.2" }
+thiserror = { version = "1" }
+futures-test = { version = "0.3" }
+futures-core = { version = "0.3" }
+log = { version = "0.4" }
+bytes = { version = "1" }
+
+[profile.release]
+codegen-units = 1
+incremental = false
+
 [profile.bench]
 codegen-units = 1
 incremental = false
