--- a/norn-timer/Cargo.toml
+++ b/norn-timer/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cordyceps = "0.3.2"
-pin-project-lite = "0.2.13"
+cordyceps.workspace = true
+pin-project-lite.workspace = true
 norn-executor = { path = "../norn-executor" }
-thiserror = "1.0.50"
+thiserror.workspace = true
 
 [dev-dependencies]
-futures-test = "0.3.29"
+futures-test.workspace = true
 proptest = "1.4.0"
