--- a/norn-uring/Cargo.toml
+++ b/norn-uring/Cargo.toml
@@ -7,22 +7,22 @@ edition = "2021"
 
 [dependencies]
 norn-executor = { path = "../norn-executor" }
-futures-core = "0.3.29"
+futures-core.workspace = true
 io-uring = {version = "0.6.2", features = ["io_safety"]}
 libc = "0.2.149"
-pin-project-lite = "0.2.13"
+pin-project-lite.workspace = true
 smallvec = "1.11.1"
 sptr = "0.3.2"
-thiserror = "1.0.50"
-log = { version = "0.4.20", features = ["kv_unstable"] }
-bytes = "1.5.0"
+thiserror.workspace = true
+log.workspace = true
+bytes.workspace = true
 socket2 = "0.5.5"
-cordyceps = "0.3.2"
+cordyceps.workspace = true
 tokio = { version = "1.35.0", features = ["io-util"] }
 
 [dev-dependencies]
 env_logger = "0.10.0"
-futures-test = "0.3.29"
+futures-test.workspace = true
 futures-util = "0.3.29"
 
 
