--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [ "benches", "norn-executor", "norn-task" , "norn-timer", "norn-uring"
 cordyceps = { version = "0.3" }
 futures = { version = "0.3" }
 pin-project-lite = { version = "0.2" }
-thiserror = { version = "1" }
+thiserror = "2"
 futures-test = { version = "0.3" }
 futures-core = { version = "0.3" }
 log = { version = "0.4" }
