--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [ "benches", "norn-executor", "norn-task" , "norn-timer", "norn-uring", "norn-util" ]
+default-members = ["norn-executor", "norn-task", "norn-timer", "norn-uring", "norn-util"]
 
 [workspace.dependencies]
 cordyceps = { version = "0.3" }
